# privacy-indexer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-image.yml
migrations/: 0001_initial.sql  0002_frozen_cmx.sql  0003_shield_pool_stats.sql
scripts/: reset-pool-state.sh
src/: main.rs
