[package]
name = "privacy-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Standalone privacy-pool indexer: WS event scan, Poseidon commitment tree, JSON/PostgreSQL state. No atomic-swap, no halo2."

[[bin]]
name = "privacy-indexer"
path = "src/main.rs"

[dependencies]
privacy-core = "0.1.0"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ethabi = "18"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }

# Use the local privacy-core (sibling checkout) so the new compliance frozen
# Indexed-MT module (`commitment_tree::frozen`) is available. The published
# crates.io 0.1.0 predates it.
[patch.crates-io]
privacy-core = { path = "../privacy-core" }
